packages/jsts/tests/dbd/benchmark/TypeError/T09 Setting getter-only property x/T09-02/fixed.js
const paginationContainer = document.querySelector(".pagination");
if (paginationContainer) {
    paginationContainer.innerHTML = "";
}
